--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/" />
 
-  <script type="application/ld+json">
+<script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ItemList",
@@ -58,7 +58,7 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         },
         {
@@ -76,7 +76,7 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         },
         {
@@ -94,7 +94,7 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         },
         {
@@ -112,7 +112,7 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         },
         {
@@ -130,7 +130,7 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         },
         {
@@ -148,7 +148,7 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         },
         {
@@ -166,14 +166,14 @@
               "price": "0",
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
-            },
+            }
           }
         }
       ]
     }
   </script>
 
-  <!-- Schema.org: Organization, Website, WebApp, FAQPage -->
+  <!-- Schema.org: Organization, Website, WebApp, FAQPage (No changes needed here) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -306,7 +306,7 @@
     <div class="p-4 sm:p-6 mt-16 mx-auto">
 
       <div class="text-center mt-8 mb-4">
-        <h1 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Your All-in-One Ai Assistant for Everyday Tasks</h1>
+        <h2 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Your All-in-One Ai Assistant for Everyday Tasks</h1>
         <p class="p-2 text-xl max-w-2xl mx-auto text-slate-600 dark:text-slate-400">All Tool AI lets you edit images, convert PDFs, generate and format text, build QR codes, convert units, run calculators, and process audio 100% free forever. No sign up. Your information is 100% confidential and secure.</p>
       </div>
 
@@ -335,7 +335,7 @@
                           <path d="M21 15v6" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Image Tools</h1>
+                      <h1 class="text-2xl font-bold mb-4">Image Tools</h2>
                       <p class="text-base">Free AI image tools to edit, resize, enhance, and convert photos online. Perfect for designers, marketers, and students in the USA, UK, India, Indonesia, Brazil, and worldwide. Fast, secure, and unlimited.</p>
                     </a>
                   </div>
@@ -350,7 +350,7 @@
                           <path d="M11 15v6h1a2 2 0 0 0 2 -2v-2a2 2 0 0 0 -2 -2h-1z" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">PDF Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">PDF Tools</h2>
                       <p class="text-base">Convert, merge, split, and compress PDF files instantly. Our free online PDF tools work globally and ensure your data is 100% safe. Trusted by users across the USA, UK, Europe, and Asia.</p>
                     </a>
                   </div>
@@ -365,7 +365,7 @@
                           <path d="M10 15l4 6" /><path d="M10 21l4 -6" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Text Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Text Tools</h2>
                       <p class="text-base">Analyze, optimize, perfect your writing and writing with the ultimate online text formatter. Ideal for students, bloggers, and teams in India, Pakistan, Philippines, USA. Available worldwide.</p>
                     </a>
                   </div>
@@ -381,7 +381,7 @@
                           <path d="M12 17l0 .01" /><path d="M16 17l0 .01" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Calculator Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Calculator Tools</h2>
                       <p class="text-base">Use our smart online calculator for math, finance, and everyday calculations. Fast, reliable, and accessible worldwide from the USA, India, Pakistan, Nigeria.</p>
                     </a>
                   </div>
@@ -395,7 +395,7 @@
                           <path d="M10 13l-1.5 -1.5" /><path d="M7 16l-1.5 -1.5" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Unit Converter Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Unit Converter Tools</h2>
                       <p class="text-base">Convert length, weight, temperature, and more with our free AI unit converter. Works instantly for users in India, USA, UK, Canada, and across the globe.</p>
                     </a>
                   </div>
@@ -412,7 +412,7 @@
                           <path d="M17 17l3 0" /><path d="M20 17l0 3" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">QR Generator Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">QR Generator Tools</h2>
                       <p class="text-base">Create free QR codes for links, text, and contacts. Our QR generator is fast, unlimited, and trusted by users worldwide from Asia, North America, India, Indonesia, Brazil, Japan.
                       </p>
                     </a>
@@ -428,7 +428,7 @@
                           <path d="M9 17v-13h10v13" /><path d="M9 8h10" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Audio Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Audio Tools</h2>
                       <p class="text-base">Convert, edit, and manage audio files with AI powered tools. Secure, fast, and free for users in India, Brazil, Turkey, USA, UK, and globally.</p>
                     </a>
                   </div>
