--- a/image-tools.html
+++ b/image-tools.html
@@ -31,6 +31,97 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-tools" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-tools" />
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://www.alltoolai.com/",
+  "name": "All Tool AI",
+  "description": "Free online AI tools for image editing and conversion including crop, resize, compress, convert, rotate, and Base64 tools.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://www.alltoolai.com/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CollectionPage",
+  "url": "https://www.alltoolai.com/image-tools",
+  "name": "Free Online Image Tools | All Tool AI",
+  "headline": "Free Online Image Tools – Crop, Resize, Compress, Convert, Rotate, Base64",
+  "description": "All-in-one AI-powered image tools to crop, resize, compress, convert, and rotate images securely and for free.",
+  "inLanguage": "en",
+  "isPartOf": {
+    "@type": "WebSite",
+    "@id": "https://www.alltoolai.com/"
+  }
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "All Tool AI",
+  "url": "https://www.alltoolai.com/",
+  "logo": {
+    "@type": "ImageObject",
+    "url": "https://www.alltoolai.com/assets/logo.png"
+  },
+  "sameAs": [
+    "https://www.facebook.com/alltoolai",
+    "https://twitter.com/alltoolai"
+  ]
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.alltoolai.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Image Tools",
+      "item": "https://www.alltoolai.com/image-tools"
+    }
+  ]
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "All Tool AI Image Tools",
+  "operatingSystem": "All",
+  "applicationCategory": "WebApplication",
+  "url": "https://www.alltoolai.com/image-tools",
+  "description": "A collection of free online AI tools for cropping, resizing, compressing, converting, rotating, and encoding images to Base64.",
+  "featureList": [
+    "Image Cropper",
+    "Image Resizer",
+    "Image Compressor",
+    "Image Converter",
+    "Image Rotate & Flip",
+    "Image to Base64",
+    "Base64 to Image"
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  }
+}
+</script>
+  
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
@@ -330,4 +421,5 @@
 </body>
 
 </html>
+
 
