--- a/index.html
+++ b/index.html
@@ -11,6 +11,230 @@
   <meta name="keywords" content="All Tool AI, free AI tools, online tools, image editor, image converter, PDF converter, PDF merge, text generator, AI text tools, audio converter, QR code generator, calculator, unit converter, fast, secure, unlimited, no sign up, USA, UK, India, Canada, Australia, Germany, France, Brazil, Japan, Indonesia, Philippines, Pakistan, Nigeria">
   <meta name="robots" content="index, follow, max-snippet, max-image-preview">
 
+  <script type="application/ld+json">  
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "description": "Your all-in-one AI assistant for everyday tasks — free tools for image editing, PDF conversion, text formatting, QR generation, unit conversion, and calculators.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">  
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "sameAs": [
+      "https://www.facebook.com/alltoolai",
+      "https://twitter.com/alltoolai",
+      "https://www.linkedin.com/company/alltoolai"
+    ],
+    "description": "All Tool AI offers free online AI-powered tools for image, PDF, text, audio, QR, unit conversion, and calculation tasks — secure and unlimited worldwide."
+  }
+  </script>
+  <script type="application/ld+json">  
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "All Tool AI - Free AI Tools: Image, PDF, Text, Audio, QR, Calculator",
+    "url": "https://www.alltoolai.com/",
+    "description": "All Tool AI is your free, all-in-one online AI toolkit to edit images, convert PDFs, generate and format text, create QR codes, convert units, and run calculators securely and globally.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "All Tool AI - Free Online AI Tools Suite",
+    "image": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "description": "All Tool AI offers a complete suite of free AI-powered online tools for image editing, PDF conversion, text formatting, audio processing, QR generation, unit conversion, and calculations — 100% free, secure, and unlimited.",
+    "brand": {
+      "@type": "Brand",
+      "name": "All Tool AI"
+    },
+    "sku": "AT-001",
+    "category": "Online AI Tools",
+    "url": "https://www.alltoolai.com/",
+    "offers": {
+      "@type": "Offer",
+      "url": "https://www.alltoolai.com/",
+      "price": "0.00",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock",
+      "itemCondition": "https://schema.org/NewCondition",
+      "seller": {
+        "@type": "Organization",
+        "name": "All Tool AI",
+        "url": "https://www.alltoolai.com/"
+      }
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "itemListOrder": "https://schema.org/ItemListOrderAscending",
+    "numberOfItems": 7,
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Image Tools",
+          "url": "https://www.alltoolai.com/image-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Free online image tools for editing, converting, compressing, and optimizing images."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "WebApplication",
+          "name": "PDF Tools",
+          "url": "https://www.alltoolai.com/pdf-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Free PDF tools for merging, splitting, compressing, and converting PDFs online."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Text Tools",
+          "url": "https://www.alltoolai.com/text-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Online text utilities for formatting, analyzing, and editing text."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Calculator Tools",
+          "url": "https://www.alltoolai.com/calculator-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Free online calculators for math, finance, and other calculations."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Unit Converter Tools",
+          "url": "https://www.alltoolai.com/unit-converter-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Online unit converter tools for converting length, weight, temperature, and more."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "item": {
+          "@type": "WebApplication",
+          "name": "QR Generator Tools",
+          "url": "https://www.alltoolai.com/qr-generator-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Free QR code generator tools for URLs, text, vCards, and more."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Audio Tools",
+          "url": "https://www.alltoolai.com/audio-tools",
+          "applicationCategory": "Utility",
+          "operatingSystem": "Web",
+          "description": "Online audio tools for editing, converting, and enhancing audio files."
+        }
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">  
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is All Tool AI really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All core tools are free forever with no daily limits and no sign up required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my information 100% confidential and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. All Tool AI uses privacy-first processing and does not sell personal data. Files are securely handled and removed after processing."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do the tools work worldwide?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, All Tool AI is optimized for global use and trusted across the USA, UK, India, Canada, Australia, Europe, and beyond."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need to create an account?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No account is needed. Just open a tool and start using it immediately."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- Social sharing -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="All Tool AI">
