--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
   }
   </script>
-  <script type="application/ld+json">
+  <!-- <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "ItemList",
@@ -179,7 +179,7 @@
       }
     ]
   }
-  </script>
+  </script> -->
   <script type="application/ld+json">  
   {
     "@context": "https://schema.org",
