--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           "@type": "WebApplication",
           "name": "Image Tools",
           "url": "https://www.alltoolai.com/image-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -118,8 +118,8 @@
           "@type": "WebApplication",
           "name": "PDF Tools",
           "url": "https://www.alltoolai.com/pdf-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -129,41 +129,41 @@
           "@type": "WebApplication",
           "name": "Text Tools",
           "url": "https://www.alltoolai.com/text-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 4,
         "item": {
           "@type": "WebApplication",
           "name": "Calculator Tools",
           "url": "https://www.alltoolai.com/calculator-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 5,
         "item": {
           "@type": "WebApplication",
           "name": "Unit Converter Tools",
           "url": "https://www.alltoolai.com/unit-converter-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 6,
         "item": {
           "@type": "WebApplication",
-          "name": "QR Generator Tools",
+          "name": "Qr Generator Tools",
           "url": "https://www.alltoolai.com/qr-generator-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -173,8 +173,8 @@
           "@type": "WebApplication",
           "name": "Audio Tools",
           "url": "https://www.alltoolai.com/audio-tools",
-          "applicationCategory": "Utility",
-          "operatingSystem": "Web",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       }
     ]
