--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           "name": "Image Tools",
           "url": "https://www.alltoolai.com/image-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -119,7 +119,7 @@
           "name": "PDF Tools",
           "url": "https://www.alltoolai.com/pdf-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -130,10 +130,10 @@
           "name": "Text Tools",
           "url": "https://www.alltoolai.com/text-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 4,
         "item": {
@@ -141,10 +141,10 @@
           "name": "Calculator Tools",
           "url": "https://www.alltoolai.com/calculator-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 5,
         "item": {
@@ -152,18 +152,18 @@
           "name": "Unit Converter Tools",
           "url": "https://www.alltoolai.com/unit-converter-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 6,
         "item": {
           "@type": "WebApplication",
-          "name": "QR Generator Tools",
+          "name": "Qr Generator Tools",
           "url": "https://www.alltoolai.com/qr-generator-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -174,7 +174,7 @@
           "name": "Audio Tools",
           "url": "https://www.alltoolai.com/audio-tools",
 
-          "operatingSystem": "Web",
+          "operatingSystem": "Web"
         }
       }
     ]
