--- a/index.html
+++ b/index.html
@@ -100,76 +100,13 @@
     "itemListOrder": "https://schema.org/ItemListOrderAscending",
     "numberOfItems": 7,
     "itemListElement": [
-      {
-        "@type": "ListItem",
-        "position": 1,
-        "item": {
-
-          "name": "Image Tools",
-          "url": "https://www.alltoolai.com/image-tools",
-
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 2,
-        "item": {
-
-          "name": "PDF Tools",
-          "url": "https://www.alltoolai.com/pdf-tools",
-
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 3,
-        "item": {
-
-          "name": "Text Tools",
-          "url": "https://www.alltoolai.com/text-tools",
-
-        }
-      },
-          {
-        "@type": "ListItem",
-        "position": 4,
-        "item": {
-
-          "name": "Calculator Tools",
-          "url": "https://www.alltoolai.com/calculator-tools",
-
-        }
-      },
-          {
-        "@type": "ListItem",
-        "position": 5,
-        "item": {
-
-          "name": "Unit Converter Tools",
-          "url": "https://www.alltoolai.com/unit-converter-tools",
-
-        }
-      },
-          {
-        "@type": "ListItem",
-        "position": 6,
-        "item": {
-
-          "name": "Qr Generator Tools",
-          "url": "https://www.alltoolai.com/qr-generator-tools",
-
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 7,
-        "item": {
-
-          "name": "Audio Tools",
-          "url": "https://www.alltoolai.com/audio-tools",
-
-        }
-      }
+      { "@type": "ListItem", "position": 1, "name": "Image Tools", "url": "https://www.alltoolai.com/image-tools" },
+      { "@type": "ListItem", "position": 2, "name": "PDF Tools", "url": "https://www.alltoolai.com/pdf-tools" },
+      { "@type": "ListItem", "position": 3, "name": "Text Tools", "url": "https://www.alltoolai.com/text-tools" },
+      { "@type": "ListItem", "position": 4, "name": "Calculator Tools", "url": "https://www.alltoolai.com/calculator-tools" },
+      { "@type": "ListItem", "position": 5, "name": "Unit Converter Tools", "url": "https://www.alltoolai.com/unit-converter-tools" },
+      { "@type": "ListItem", "position": 6, "name": "Qr Generator Tools", "url": "https://www.alltoolai.com/qr-generator-tools" },
+      { "@type": "ListItem", "position": 7, "name": "Audio Tools", "url": "https://www.alltoolai.com/audio-tools" }
     ]
   }
   </script>
