--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     }
   }
   </script>
-  <!-- <script type="application/ld+json">
+  <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Product",
@@ -75,7 +75,7 @@
       "availability": "https://schema.org/InStock",
     }
   }
-  </script> -->
+  </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
