--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     "@type": "Product",
     "name": "All Tool AI - Free Online AI Tools Suite",
     "image": "https://www.alltoolai.com/assets/svg/logo.svg",
-    "description": "All Tool AI offers a complete suite of free AI-powered online tools for image editing, PDF conversion, text formatting, audio processing, QR generation, unit conversion, and calculations — 100% free, secure, and unlimited.",
+    "description": "All Tool AI offers a complete suite of free AI-powered online tools — 100% free, secure, and unlimited.",
   }
   </script>
   <script type="application/ld+json">
