--- a/index.html
+++ b/index.html
@@ -54,14 +54,22 @@
     }
   }
   </script>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Product",
-    "name": "All Tool AI - Free Online AI Tools Suite",
-    "description": "All Tool AI offers a complete suite of free AI-powered online tools — 100% free, secure, and unlimited.",
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "All Tool AI - Free Online AI Tools Suite",
+  "brand": "All Tool AI",
+  "description": "All Tool AI offers a complete suite of free AI-powered online tools for image editing, PDF conversion, text formatting, audio processing, QR generation, unit conversion, and calculations — 100% free, secure, and unlimited.",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/",
+    "availability": "https://schema.org/InStock",
+    "price": "0.00",
+    "priceCurrency": "USD"
   }
-  </script>
+}
+</script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
