--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
           "url": "https://www.alltoolai.com/image-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
       },
       {
@@ -98,6 +103,11 @@
           "url": "https://www.alltoolai.com/pdf-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }          
         }
       },
       {
@@ -109,6 +119,11 @@
           "url": "https://www.alltoolai.com/text-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
       },
           {
@@ -120,6 +135,11 @@
           "url": "https://www.alltoolai.com/calculator-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
       },
           {
@@ -131,6 +151,11 @@
           "url": "https://www.alltoolai.com/unit-converter-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
       },
           {
@@ -142,6 +167,11 @@
           "url": "https://www.alltoolai.com/qr-generator-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
       },
       {
@@ -153,6 +183,11 @@
           "url": "https://www.alltoolai.com/audio-tools",
           "applicationCategory": "UtilitiesApplication",
           "operatingSystem": "Web"
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
         }
       }
     ]
