--- a/image-tools.html
+++ b/image-tools.html
@@ -30,97 +30,6 @@
   <!-- Hreflang (safe default if you only have English for now) -->
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-tools" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-tools" />
-
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "url": "https://www.alltoolai.com/",
-  "name": "All Tool AI",
-  "description": "Free online AI tools for image editing and conversion including crop, resize, compress, convert, rotate, and Base64 tools.",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://www.alltoolai.com/search?q={search_term_string}",
-    "query-input": "required name=search_term_string"
-  }
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "CollectionPage",
-  "url": "https://www.alltoolai.com/image-tools",
-  "name": "Free Online Image Tools | All Tool AI",
-  "headline": "Free Online Image Tools – Crop, Resize, Compress, Convert, Rotate, Base64",
-  "description": "All-in-one AI-powered image tools to crop, resize, compress, convert, and rotate images securely and for free.",
-  "inLanguage": "en",
-  "isPartOf": {
-    "@type": "WebSite",
-    "@id": "https://www.alltoolai.com/"
-  }
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "All Tool AI",
-  "url": "https://www.alltoolai.com/",
-  "logo": {
-    "@type": "ImageObject",
-    "url": "https://www.alltoolai.com/assets/logo.png"
-  },
-  "sameAs": [
-    "https://www.facebook.com/alltoolai",
-    "https://twitter.com/alltoolai"
-  ]
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  "itemListElement": [
-    {
-      "@type": "ListItem",
-      "position": 1,
-      "name": "Home",
-      "item": "https://www.alltoolai.com/"
-    },
-    {
-      "@type": "ListItem",
-      "position": 2,
-      "name": "Image Tools",
-      "item": "https://www.alltoolai.com/image-tools"
-    }
-  ]
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "SoftwareApplication",
-  "name": "All Tool AI Image Tools",
-  "operatingSystem": "All",
-  "applicationCategory": "WebApplication",
-  "url": "https://www.alltoolai.com/image-tools",
-  "description": "A collection of free online AI tools for cropping, resizing, compressing, converting, rotating, and encoding images to Base64.",
-  "featureList": [
-    "Image Cropper",
-    "Image Resizer",
-    "Image Compressor",
-    "Image Converter",
-    "Image Rotate & Flip",
-    "Image to Base64",
-    "Base64 to Image"
-  ],
-  "offers": {
-    "@type": "Offer",
-    "price": "0",
-    "priceCurrency": "USD"
-  }
-}
-</script>
   
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
@@ -130,16 +39,16 @@
   <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
   <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
-  <!-- 1) Preconnect for Google Fonts -->
+  <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <!-- 2) Non-blocking load for Google Fonts stylesheet -->
+  <!-- Non-blocking load for Google Fonts stylesheet -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media="print" onload="this.media='all'" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" />
     
-  <!-- 3) Non-blocking load for your Tailwind build -->
+  <!-- Non-blocking load for your Tailwind build -->
   <link rel="preload" href="/assets/style/style.css" as="style" />
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
   <link rel="stylesheet" href="/assets/style/style.css" />
@@ -417,9 +326,5 @@
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
 
-
 </body>
-
 </html>
-
-
