--- a/image-tools.html
+++ b/image-tools.html
@@ -30,6 +30,173 @@
   <!-- Hreflang (safe default if you only have English for now) -->
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-tools" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-tools" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "url": "https://www.alltoolai.com/image-tools",
+    "name": "Free Online Image Tools | All Tool AI",
+    "headline": "Free Online Image Tools – Crop, Resize, Compress, Convert, Rotate, Base64",
+    "description": "All-in-one AI-powered image tools to crop, resize, compress, convert, and rotate images securely and for free.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.alltoolai.com/assets/logo.png"
+    },
+    "sameAs": [
+      "https://www.facebook.com/alltoolai",
+      "https://twitter.com/alltoolai"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Image Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 7,
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Image Cropper",
+        "url": "https://www.alltoolai.com/image-crop"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Resize",
+        "url": "https://www.alltoolai.com/image-resize"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Images Compressor",
+        "url": "https://www.alltoolai.com/images-compress"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "Images Converter",
+        "url": "https://www.alltoolai.com/images-convert"
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Image Rotate & Flip",
+        "url": "https://www.alltoolai.com/image-rotate-flip"
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Image to Base64",
+        "url": "https://www.alltoolai.com/image-to-base64"
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "name": "Base64 to Image",
+        "url": "https://www.alltoolai.com/base64-to-image"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Which image formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "JPG/JPEG, PNG, WebP, and GIF are supported across most tools."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are there file size limits?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Most uploads work instantly in the browser. Large files are optimized server-side and deleted after processing."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will compression reduce quality?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Our smart compression keeps visual quality high while reducing file size. You can adjust compression quality as needed."
+        }
+      }
+    ]
+  }
+  </script>
   
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
@@ -328,3 +495,4 @@
 
 </body>
 </html>
+
