--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   {
     "@context": "https://schema.org",
     "@type": "ItemList",
+    "name": "Tools List",
     "itemListOrder": "https://schema.org/ItemListOrderAscending",
     "numberOfItems": 7,
     "itemListElement": [
