--- a/image-tools.html
+++ b/image-tools.html
@@ -31,7 +31,7 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-tools" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-tools" />
 
-  <script type="application/ld+json">
+    <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
@@ -67,7 +67,7 @@
     "url": "https://www.alltoolai.com/",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.alltoolai.com/assets/logo.png"
+      "url": "https://www.alltoolai.com/assets/svg/logo.svg"
     },
     "sameAs": [
       "https://www.facebook.com/alltoolai",
@@ -87,7 +87,7 @@
     "seller": {
       "@type": "Organization",
       "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/image-tools"
     },
     "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
   }
@@ -495,4 +495,5 @@
 
 </body>
 </html>
+
 
