--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
   <meta name="keywords" content="All Tool AI, free AI tools, online tools, image editor, image converter, PDF converter, PDF merge, text generator, AI text tools, audio converter, QR code generator, calculator, unit converter, fast, secure, unlimited, no sign up, USA, UK, India, Canada, Australia, Germany, France, Brazil, Japan, Indonesia, Philippines, Pakistan, Nigeria">
   <meta name="robots" content="index, follow, max-snippet, max-image-preview">
 
+  <!-- Social sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="All Tool AI">
+  <meta property="og:url" content="https://www.alltoolai.com/">
+  <meta property="og:title" content="All Tool AI Free, Fast, and Secure AI Tools">
+  <meta property="og:description" content="Top, fast, and lifetime free AI tools for images, PDFs, text, audio, QR, and more. 100% confidential & secure. Available globally.">
+  <meta property="og:image" content="https://www.alltoolai.com/assets/icon/favicon.svg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="en_GB">
+  <meta property="og:locale:alternate" content="en_IN">
+  <meta property="og:locale:alternate" content="hi_IN">
+  <meta property="og:locale:alternate" content="id_ID">
+  <meta property="og:locale:alternate" content="pt_BR">
+  <meta property="og:locale:alternate" content="es_ES">
+  <meta property="og:locale:alternate" content="fr_FR">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="All Tool AI Free, Fast, and Secure AI Tools">
+  <meta name="twitter:description" content="Free AI tools for images, PDFs, text, audio, QR, calculators, and unit converters. Unlimited use, no signup, global access.">
+  <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/og-image.jpg">
+
+  <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
+  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="x-default">
+  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="en">
+
+  <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
+  <link rel="alternate" href="https://alltoolai.com/" hreflang="x-default">
+  <link rel="alternate" href="https://alltoolai.com/" hreflang="en">
+
   <script type="application/ld+json">  
   {
     "@context": "https://schema.org",
@@ -130,33 +161,6 @@
   }
   </script>
 
-  <!-- Social sharing -->
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="All Tool AI">
-  <meta property="og:url" content="https://www.alltoolai.com/">
-  <meta property="og:title" content="All Tool AI Free, Fast, and Secure AI Tools">
-  <meta property="og:description" content="Top, fast, and lifetime free AI tools for images, PDFs, text, audio, QR, and more. 100% confidential & secure. Available globally.">
-  <meta property="og:image" content="https://www.alltoolai.com/assets/icon/favicon.svg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:locale:alternate" content="en_GB">
-  <meta property="og:locale:alternate" content="en_IN">
-  <meta property="og:locale:alternate" content="hi_IN">
-  <meta property="og:locale:alternate" content="id_ID">
-  <meta property="og:locale:alternate" content="pt_BR">
-  <meta property="og:locale:alternate" content="es_ES">
-  <meta property="og:locale:alternate" content="fr_FR">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="All Tool AI Free, Fast, and Secure AI Tools">
-  <meta name="twitter:description" content="Free AI tools for images, PDFs, text, audio, QR, calculators, and unit converters. Unlimited use, no signup, global access.">
-  <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/og-image.jpg">
-
-  <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
-  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/" />
-  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/" />
-
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
@@ -200,7 +204,7 @@
     <div class="p-4 sm:p-6 mt-16 mx-auto">
 
       <div class="text-center mt-8 mb-4">
-        <h2 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Your All-in-One Ai Assistant for Everyday Tasks</h1>
+        <h1 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Your All-in-One Ai Assistant for Everyday Tasks</h1>
         <p class="p-2 text-xl max-w-2xl mx-auto text-slate-600 dark:text-slate-400">All Tool AI lets you edit images, convert PDFs, generate and format text, build QR codes, convert units, run calculators, and process audio 100% free forever. No sign up. Your information is 100% confidential and secure.</p>
       </div>
 
@@ -229,7 +233,7 @@
                           <path d="M21 15v6" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Image Tools</h2>
+                      <h2 class="text-2xl font-bold mb-4">Image Tools</h2>
                       <p class="text-base">Free AI image tools to edit, resize, enhance, and convert photos online. Perfect for designers, marketers, and students in the USA, UK, India, Indonesia, Brazil, and worldwide. Fast, secure, and unlimited.</p>
                     </a>
                   </div>
@@ -373,7 +377,6 @@
                 </section>
                 
               </div>
-
 
             </div>
 
