--- a/image-tools.html
+++ b/image-tools.html
@@ -44,6 +44,7 @@
     }
   }
   </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -59,6 +60,7 @@
     }
   }
   </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -75,6 +77,7 @@
     ]
   }
   </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -92,6 +95,7 @@
     "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
   }
   </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -112,6 +116,7 @@
     ]
   }
   </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -165,6 +170,7 @@
     ]
   }
   </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -175,15 +181,15 @@
         "name": "Which image formats are supported?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "JPG/JPEG, PNG, WebP, and GIF are supported across most tools."
+          "text": "JPG/JPEG, PNG, WebP, and GIF are supported across all tools. Transparency is preserved for PNG, WebP, and GIF when the output format supports it."
         }
       },
       {
         "@type": "Question",
-        "name": "Are there file size limits?",
+        "name": "Are there file size or usage limits?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Most uploads work instantly in the browser. Large files are optimized server-side and deleted after processing."
+          "text": "All Tool AI is lifetime free and unlimited for typical use. Most uploads process instantly in your browser; very large files may be optimized server-side and are removed after processing. No sign up is required."
         }
       },
       {
@@ -191,7 +197,63 @@
         "name": "Will compression reduce quality?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Our smart compression keeps visual quality high while reducing file size. You can adjust compression quality as needed."
+          "text": "Our smart compression keeps visual quality high while shrinking file size. You can choose a quality level or set a target size (KB/MB) to hit your goal."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does the resizer keep aspect ratio and image quality?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Resize by width, height, or percentage while keeping the aspect ratio and great image quality. Bulk resizing is supported."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I crop to exact pixels or popular ratios?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Crop to exact pixel dimensions or use popular aspect ratios like 1:1, 4:5, and 16:9."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will transparency be preserved when converting?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes—PNG, WebP, and GIF support transparency and we preserve it whenever the chosen format allows. Converting to JPG removes transparency because JPG doesn’t support it; transparent areas will appear as a solid background."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my data private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Your images are processed fast and securely. Typical jobs run locally in your browser. For very large files, we process them server-side and remove files after processing. No sign up, and your work remains 100% confidential."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I process multiple images at once?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Bulk uploads are supported for Resize, Compress, and Convert."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What devices and browsers are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "All modern browsers on desktop and mobile are supported—no installation required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support Base64 encode/decode?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Image to Base64 creates a data URI for use in HTML/CSS, and Base64 to Image decodes a string and auto-detects the MIME type. You can copy the result or download it as a file."
         }
       }
     ]
@@ -450,16 +512,38 @@
                   <div id="midad-2" aria-label="Mid Ad 2"></div>
                 </div>
                 
-                <section class="text-left max-w-4xl mx-auto">
-                  <h3 class="text-3xl font-bold mb-4 text-center">Frequently asked questions</h3>
-                  <h4 class="text-2xl font-semibold mb-2">Which image formats are supported?</h4>
-                  <p class="text-base font-medium mb-6">JPG/JPEG, PNG, WebP, and GIF are supported across most tools. More formats are coming soon.</p>
+                <section id="faq" class="text-left max-w-4xl mx-auto">
+                  <h2 class="text-3xl font-bold mb-4 text-center">Frequently asked questions</h2>
 
-                  <h3 class="text-2xl font-semibold mb-2">Are there file size limits?</h3>
-                  <p class="text-base font-medium mb-6">Typical uploads work instantly in the browser. For very large files, we optimize server-side and remove files after processing.</p>
+                  <h3 class="text-2xl font-semibold mb-2">Which image formats are supported?</h3>
+                  <p class="text-base font-medium mb-6">JPG/JPEG, PNG, WebP, and GIF are supported across all tools. Transparency is preserved for PNG, WebP, and GIF when the output format supports it.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Are there file size or usage limits?</h3>
+                  <p class="text-base font-medium mb-6">All Tool AI is lifetime free and unlimited for typical use. Most uploads process instantly in your browser; very large files may be optimized server-side and are removed after processing. No sign up is required.</p>
 
                   <h3 class="text-2xl font-semibold mb-2">Will compression reduce quality?</h3>
-                  <p class="text-base font-medium mb-6">Our smart compression keeps visual quality high while shrinking file size. You can also choose your preferred quality.</p>
+                  <p class="text-base font-medium mb-6">Our smart compression keeps visual quality high while shrinking file size. You can choose a quality level or set a target size (KB/MB) to hit your goal.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Does the resizer keep aspect ratio and image quality?</h3>
+                  <p class="text-base font-medium mb-6">Yes. Resize by width, height, or percentage while keeping the aspect ratio and great image quality. Bulk resizing is supported.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Can I crop to exact pixels or popular ratios?</h3>
+                  <p class="text-base font-medium mb-6">Yes. Crop to exact pixel dimensions or use popular aspect ratios like 1:1, 4:5, and 16:9.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Will transparency be preserved when converting?</h3>
+                  <p class="text-base font-medium mb-6">Yes—PNG, WebP, and GIF support transparency and we preserve it whenever the chosen format allows. Converting to JPG removes transparency because JPG doesn’t support it; transparent areas will appear as a solid background.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Is my data private and secure?</h3>
+                  <p class="text-base font-medium mb-6">Your images are processed fast and securely. Typical jobs run locally in your browser. For very large files, we process them server-side and remove files after processing. No sign up, and your work remains 100% confidential.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Can I process multiple images at once?</h3>
+                  <p class="text-base font-medium mb-6">Yes. Bulk uploads are supported for Resize, Compress, and Convert.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">What devices and browsers are supported?</h3>
+                  <p class="text-base font-medium mb-6">All modern browsers on desktop and mobile are supported—no installation required.</p>
+
+                  <h3 class="text-2xl font-semibold mb-2">Do you support Base64 encode/decode?</h3>
+                  <p class="text-base font-medium mb-6">Yes. Image to Base64 creates a data URI for use in HTML/CSS, and Base64 to Image decodes a string and auto-detects the MIME type. You can copy the result or download it as a file.</p>
                 </section>
                 
               </div>
