--- a/image-tools.html
+++ b/image-tools.html
@@ -44,6 +44,21 @@
     }
   }
   </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/pdf-tools",
+    "name": "Free Online PDF Tools | Merge, Split, Convert, Secure",
+    "description": "Use All Tool AI’s free PDF tools to merge, split, convert, rotate, extract, encrypt, and manage your PDFs securely online. 100% free, unlimited, and confidential.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
 
   <script type="application/ld+json">
   {
@@ -82,7 +97,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Offer",
-    "url": "https://www.alltoolai.com/",
+    "url": "https://www.alltoolai.com/image-tools",
     "priceCurrency": "USD",
     "price": "0.00",
     "availability": "https://schema.org/InStock",
@@ -90,7 +105,7 @@
     "seller": {
       "@type": "Organization",
       "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/image-tools"
+      "url": "https://www.alltoolai.com/"
     },
     "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
   }
@@ -579,3 +594,4 @@
 
 </body>
 </html>
+
