--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -31,6 +31,174 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/calculator-tools" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/calculator-tools" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "description": "Free online calculator tools for health, finance, math, and everyday tasks. Fast, accurate, and privacy-first with no signup required.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/calculator-tools",
+    "name": "Free Online Calculator Tools | BMI, Loan, Percentage & More",
+    "description": "Use All Tool AI’s free calculator tools to calculate BMI, BMR, loan, interest, age, percentage, and more. 100% free, secure, and privacy-first.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Free Online Calculator Tools | BMI, Loan, Percentage & More | All Tool AI",
+    "url": "https://www.alltoolai.com/calculator-tools",
+    "description": "Access free and unlimited online calculators for BMI, BMR, loan, percentage, age, and more. Accurate, fast, and secure tools for daily use.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": "https://www.alltoolai.com/logo.png",
+    "description": "All Tool AI offers free online calculators for health, finance, and mathematics, designed to be fast, accurate, and privacy-first.",
+    "sameAs": [
+      "https://www.facebook.com/alltoolai",
+      "https://twitter.com/alltoolai",
+      "https://www.linkedin.com/company/alltoolai"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/calculator-tools",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Calculator Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 14,
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "Fertilizer Calculator", "url": "https://www.alltoolai.com/fertilizer-calculator" },
+      { "@type": "ListItem", "position": 2, "name": "Age Calculator", "url": "https://www.alltoolai.com/age-calculator" },
+      { "@type": "ListItem", "position": 3, "name": "Calorie Calculator", "url": "https://www.alltoolai.com/calorie-calculator" },
+      { "@type": "ListItem", "position": 4, "name": "BMI Calculator", "url": "https://www.alltoolai.com/bmi-calculator" },
+      { "@type": "ListItem", "position": 5, "name": "BMR Calculator", "url": "https://www.alltoolai.com/bmr-calculator" },
+      { "@type": "ListItem", "position": 6, "name": "Compound Interest Calculator", "url": "https://www.alltoolai.com/compound-interest-calculator" },
+      { "@type": "ListItem", "position": 7, "name": "Loan Calculator", "url": "https://www.alltoolai.com/loan-calculator" },
+      { "@type": "ListItem", "position": 8, "name": "Date Calculator", "url": "https://www.alltoolai.com/date-calculator" },
+      { "@type": "ListItem", "position": 9, "name": "IP Subnet Calculator", "url": "https://www.alltoolai.com/ip-subnet-calculator" },
+      { "@type": "ListItem", "position": 10, "name": "Percentage Calculator", "url": "https://www.alltoolai.com/percentage-calculator" },
+      { "@type": "ListItem", "position": 11, "name": "Scientific Calculator", "url": "https://www.alltoolai.com/scientific-calculator" },
+      { "@type": "ListItem", "position": 12, "name": "Math Equation Solver", "url": "https://www.alltoolai.com/math-equation-solver" },
+      { "@type": "ListItem", "position": 13, "name": "Algebra Solver", "url": "https://www.alltoolai.com/algebra-solver" },
+      { "@type": "ListItem", "position": 14, "name": "Trigonometry Calculator", "url": "https://www.alltoolai.com/trigonometry-calculator" }     
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Are these calculators free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All tools are 100% free with unlimited usage and no signup."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my information private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. We prioritize privacy and security. Your personal inputs are not stored and your data remains confidential."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do the calculators work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. All tools work smoothly on phones, tablets, and desktops."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which calculators are included?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Health (BMI, BMR, Calorie, Age), Finance (Loan, Compound Interest, Percentage), Math (Scientific, Algebra, Equation Solver, Trigonometry), and Utility (Date, IP Subnet, Fertilizer)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I share results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can copy results and share links to each tool for quick access."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
