--- a/qr-generator-tools.html
+++ b/qr-generator-tools.html
@@ -81,7 +81,7 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": "https://www.alltoolai.com/logo.png",
+    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
     "sameAs": [
       "https://www.facebook.com/alltoolai",
       "https://twitter.com/alltoolai"
