--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -119,7 +119,7 @@
       {
         "@type": "ListItem",
         "position": 2,
-        "name": "PDF Tools",
+        "name": "Calculator Tools",
         "item": "https://www.alltoolai.com/calculator-tools"
       }
     ]
