--- a/qr-generator-tools.html
+++ b/qr-generator-tools.html
@@ -119,7 +119,7 @@
       {
         "@type": "ListItem",
         "position": 2,
-        "name": "PDF Tools",
+        "name": "Qr Generator Tools",
         "item": "https://www.alltoolai.com/qr-generator-tools"
       }
     ]
